# prime-multiples

./: Cargo.toml  results.txt  results2.txt
src/: main.rs  results.txt
