[package]
name = "prime_multiples"
version = "0.1.0"
authors = ["Evan Tatarka <evan@tatarka.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primal = "0.3.0"
num-bigint = "0.3.1"
num-traits = "0.2.14"
rug = "1.11.0"
#concurrent_prime_sieve = "0.3.3"
[dependencies.gmp-mpfr-sys]
version = "~1.4"
